fix flex collapse in safari

--- a/src/styles/home/article-home-cta.scss
+++ b/src/styles/home/article-home-cta.scss
@@ -16,6 +16,10 @@
     @media (min-width: $screen-md) {
       padding: $xl;
     }
+
+    @include media(md) {
+      flex: 0 0 auto;
+    }
   }
 
   .cta-features {
